--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "KahaniExpresss1",
-    "slug": "KahaniExpresss1",
+    "name": "KahaniExpresss",
+    "slug": "KahaniExpresss",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
