--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kahaniexpresss1",
+  "name": "kahaniexpresss",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^21.5.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.7",
+    "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -30,6 +33,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
