--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-native-firebase/app": "^21.5.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
+    "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.6",
@@ -32,6 +35,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.3",
+    "expo-three": "^8.0.0",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.2",
     "react": "18.3.1",
