--- a/package.json
+++ b/package.json
@@ -19,24 +19,28 @@
     "@react-native-firebase/app": "^21.5.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
-    "expo": "~52.0.7",
+    "expo": "^52.0.20",
+    "expo-asset": "^11.0.1",
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
+    "expo-gl": "^15.0.2",
     "expo-haptics": "~14.0.0",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.6",
-    "expo-splash-screen": "~0.29.11",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.14",
+    "expo-splash-screen": "^0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.3.1",
@@ -46,7 +50,8 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "^13.12.5",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -54,10 +59,18 @@
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/three": "^0.171.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+  "doctor": {
+    "reactNativeDirectoryCheck": {
+      "listUnknownPackages": false
+    }
+  }
+}
 }
